--- a/views/photography.html
+++ b/views/photography.html
@@ -10,14 +10,14 @@
       <div class="modal-dialog">
         <!--  image 1 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">X</span>
-              </button>
+          <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+          <!--        <span aria-hidden="true">X</span>-->
+          <!--    </button>-->
           <div class="modal-body">
             <img src="img/IMG_4935-2.jpg">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Matcha Latte and croissant at Lavande Patisserie</p>
           </div>
         </div>
       </div>
@@ -28,12 +28,12 @@
       <div class="modal-dialog">
         <!--  image 2 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_2375.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Yuri</p>
           </div>
         </div>
       </div>
@@ -48,12 +48,12 @@
       <div class="modal-dialog">
         <!--  image 3 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_2837.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Lisa</p>
           </div>
         </div>
       </div>
@@ -64,12 +64,12 @@
       <div class="modal-dialog">
         <!--  image 4 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_3772.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Ali</p>
           </div>
         </div>
       </div>
@@ -80,12 +80,12 @@
       <div class="modal-dialog">
         <!--  image 5 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_3325.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Courtney</p>
           </div>
         </div>
       </div>
@@ -100,12 +100,12 @@
       <div class="modal-dialog">
         <!--  image 6 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_2287.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Yuri</p>
           </div>
         </div>
       </div>
@@ -116,12 +116,12 @@
       <div class="modal-dialog">
         <!--  image 7 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_2445.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Ariel</p>
           </div>
         </div>
       </div>
@@ -132,12 +132,12 @@
       <div class="modal-dialog">
         <!--  image 8 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_3749.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Hannah</p>
           </div>
         </div>
       </div>
@@ -151,12 +151,12 @@
       <div class="modal-dialog">
         <!--  image 9 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/FullSizeRender.jpg">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Valerie</p>
           </div>
         </div>
       </div>
@@ -167,12 +167,12 @@
       <div class="modal-dialog">
         <!--  image 10 Modal content-->
         <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal">X</button>
+          <!--<button type="button" class="close" data-dismiss="modal">X</button>-->
           <div class="modal-body">
             <img src="img/IMG_4218.JPG">
           </div>
           <div class="modal-caption">
-            <p>CAPTION</p>
+            <p>Saint-Honoré Rose at Laduree</p>
           </div>
         </div>
       </div>
